# rust-starter

./: .dockerignore  .gitignore  Makefile  README.md  bacon.toml  diesel.toml
DEVOPS/: build_all.sh  build_one.sh  deploy.sh
DEVOPS/dev/: .example.env  docker-compose.yml
DEVOPS/prod/: .example.env  build_deploy.sh  docker-compose.yml
app/: .env  Cargo.toml  Dockerfile  app.css  bacon.toml  docker-compose.yml  entrypoint.sh  example.env  package.json
app/migrations/2025-12-08-041745-0000_app_init/: down.sql  up.sql
app/public/css/: index.css
app/src/: main.rs
app/src/app_router/: mod.rs
app/src/app_templates/: mod.rs
app/src/app_templates/layouts/: main.rs  management.rs  mod.rs
app/src/app_templates/pages/: home.rs  login.rs  management_roles_privileges.rs  management_users.rs  mod.rs  sign_up.rs
app/src/app_templates/tables/: management.rs
app/src/context/: datastar.rs  mod.rs
app/src/env/: config.rs  db_config.rs  mod.rs
app/src/middlewares/: auth.rs  mod.rs  privileges.rs  trace.rs
app/src/models/: user.rs
app/src/models/auth/: privilege.rs  role.rs  role_privilege.rs  session.rs  user.rs
app/src/repositories/: mod.rs  privileges.rs  roles.rs  roles_privileges.rs  sessions.rs  users.rs
app/src/routes/: mod.rs
app/src/routes/private/: management.rs
app/src/routes/public/: hello_world.rs  home.rs  login.rs  me.rs  mod.rs  sign_up.rs
app/src/services/: auth.rs  hello_world.rs  hello_world_two.rs  mod.rs  privileges.rs  users.rs
libs/datastar/: Cargo.toml
libs/datastar/src/: elements.rs  events.rs  lib.rs  modes.rs  namespace.rs  query_params.rs
libs/datastar/src/templates/: mod.rs
libs/datastar/src/templates/redirect/: mod.rs
libs/datastar/src/templates/table/: infinite_scroll.rs  mod.rs  search_params.rs
libs/models/: Cargo.toml
libs/models/src/api/: auth.rs  datastar.rs  mod.rs  query_params.rs  search_params.rs
libs/models/src/db/auth/: mod.rs  privilege.rs  role.rs  role_privilege.rs  session.rs  user.rs
libs/schemas/: Cargo.toml
libs/schemas/src/: app.rs  lib.rs
libs/templates/: Cargo.toml  package-lock.json  styles.css
libs/templates/src/: lib.rs
libs/templates/src/button/: mod.rs
libs/templates/src/form/: mod.rs
libs/templates/src/icon/: icon_data.rs  mod.rs
libs/templates/src/input/: mod.rs
libs/templates/src/label/: anchored.rs  mod.rs
libs/templates/src/select/: mod.rs
libs/templates/src/table/: infinite_scroll.rs  mod.rs
libs/templates/src/tabs/: mod.rs
libs/utils/: Cargo.toml
libs/utils/src/: auth.rs  ctx.rs  datastar.rs  lib.rs  prelude.rs
libs/utils/src/auth/: hash.rs  mod.rs  privileges.rs  roles.rs
libs/utils/src/extensions/: ctx.rs  mod.rs  privileges.rs
migrations/2025-12-08-041745-0000_app_init/: down.sql  up.sql
