[package]
name = "rust_starter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.4", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
auth = { path = "../libs/auth" }
diesel-async = { version = "0.7.4", features = ["bb8", "postgres"] }
bb8 = "0.9.1"
