[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.4", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
diesel-async = { version = "0.7.4", features = ["bb8", "postgres"] }
bb8 = "0.9.1"
models = { path = "../libs/models" }
schemas = { path = "../libs/schemas" }
utils = { path = "../libs/utils" }
uuid = { version = "1.19.0", features = ["v7"] }
serde = { version = "1.0.228", features = ["derive"] }
templr = { version = "0.2.5", features = ["axum"] }
templates = { path = "../libs/templates" }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
