[package]
name = "datastar"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.4.0"
strum = { version = "0.27.2", features = ["derive"] }
templr = "0.2.5"
templates = { path = "../templates" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
