[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.4", features = ["chrono", "postgres"] }
http = "1.4.0"
schemas = { path = "../schemas" }
serde = { version = "1.0.228", features = ["derive"] }
templr = "0.2.5"
templates = { path = "../templates" }
datastar = { path = "../datastar" }
